--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@react-native-async-storage/async-storage": "1.23.1",
 		"@supabase/supabase-js": "^2.46.1",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"expo": "~52.0.3",
 		"expo-constants": "~17.0.2",
@@ -23,6 +23,8 @@
 		"expo-secure-store": "~14.0.0",
 		"expo-status-bar": "~2.0.0",
 		"expo-system-ui": "~4.0.2",
+		"lucide-react": "^0.471.1",
+		"lucide-react-native": "^0.471.0",
 		"nativewind": "^4.1.23",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
@@ -32,10 +34,12 @@
 		"react-native-reanimated": "~3.16.1",
 		"react-native-safe-area-context": "4.12.0",
 		"react-native-screens": "^4.0.0",
+		"react-native-svg": "15.8.0",
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "~0.19.13",
-		"tailwind-merge": "^2.5.4",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "^3.4.14",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
